# deepseek-cursor-proxy-rust

./: Cargo.toml  README.en.md  README.md  施工文档.md
.github/workflows/: release.yml
docs/: 行为对齐基线.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/app/: mod.rs  state.rs
src/cursor/: state.rs
src/http/: handlers.rs  mod.rs  routes.rs  sse.rs  upstream.rs
src/protocol/: folding.rs  mod.rs  model.rs  normalize.rs  response_rewrite.rs  transform.rs
src/reasoning/: keys.rs  mod.rs  recovery.rs  sqlite_store.rs  store.rs
src/trace/: model.rs  writer.rs
src/tunnel/: cloudflared.rs
tests/: proxy_integration.rs  smoke.rs
